Huge cleanup
* Parent pom moved to the top level of the repository
* Deprecated modules removed
* Old build files removed (editions + ant)
* Old library jars removed
* Migration to Junit 5

Important notes:

* The Swagger extension couldn't be saved, it relied on a removed platform module
* The XML extension couldn't be removed, too many things depended on it